增加语种互换功能，优化部分逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="NextStep">下一步</string>
     <string name="System">系统</string>
     <string name="Finish">完成</string>
+    <string name="IsScreenFetching">正在抓取屏幕信息…</string>
 </resources>
